--- a/home.html
+++ b/home.html
@@ -42,7 +42,27 @@
     <div class="flex items-center gap-2">
       <img src="./image/logo.png" class="h-10 w-auto mix-blend-screen" alt="Logo Vizta" />
     </div>
+    <button id="menuBtn" class="text-white text-2xl focus:outline-none">☰</button>
   </nav>
+
+  <div id="dashboard" class="fixed top-0 right-0 w-64 h-full bg-gradient-to-b from-black via-blue-800 via-green-800 via-brown-800 via-yellow-800 to-purple-800 text-white shadow-lg transform translate-x-full transition-transform duration-300 z-50">
+    <div class="p-4 flex justify-between items-center border-b border-pink-400">
+      <h2 class="text-xl font-bold">Dashboard</h2>
+      <button id="closeBtn" class="text-xl">✖</button>
+    </div>
+  
+    <ul class="mt-4 space-y-2">
+      <li><a href="home.html" class="block px-4 py-2 rounded-md bg-gradient-to-r from-black via-blue-800 via-green-800 via-brown-800 via-yellow-800 to-purple-800 hover:bg-black">HOME</a></li>
+      <li><a href="news.html" class="block px-4 py-2 rounded-md bg-gradient-to-r from-black via-blue-800 via-green-800 via-brown-800 via-yellow-800 to-purple-800 hover:bg-black">NEWS</a></li>
+      <li><a href="outlet.html" class="block px-4 py-2 rounded-md bg-gradient-to-r from-black via-blue-800 via-green-800 via-brown-800 via-yellow-800 to-purple-800 hover:bg-black">OUTLET</a></li>
+      <li><a href="system.html" class="block px-4 py-2 rounded-md bg-gradient-to-r from-black via-blue-800 via-green-800 via-brown-800 via-yellow-800 to-purple-800 hover:bg-black">SYSTEM</a></li>
+      <li><a href="event.html" class="block px-4 py-2 rounded-md bg-gradient-to-r from-black via-blue-800 via-green-800 via-brown-800 via-yellow-800 to-purple-800 hover:bg-black">EVENT</a></li>
+      <li><a href="promo.html" class="block px-4 py-2 rounded-md bg-gradient-to-r from-black via-blue-800 via-green-800 via-brown-800 via-yellow-800 to-purple-800 hover:bg-black">PROMO</a></li>
+      <li><a href="faq.html" class="block px-4 py-2 rounded-md bg-gradient-to-r from-black via-blue-800 via-green-800 via-brown-800 via-yellow-800 to-purple-800 hover:bg-black">FAQ</a></li>
+      <li><a href="about.html" class="block px-4 py-2 rounded-md bg-gradient-to-r from-black via-blue-800 via-green-800 via-brown-800 via-yellow-800 to-purple-800 hover:bg-black">ABOUT US</a></li>
+      <li><a href="contact.html" class="block px-4 py-2 rounded-md bg-gradient-to-r from-black via-blue-800 via-green-800 via-brown-800 via-yellow-800 to-purple-800 hover:bg-black">CONTACT</a></li>
+    </ul>
+  </div>  
   
   <header class="relative w-full h-[400px] overflow-hidden pt-16">
     <div class="absolute top-0 left-0 w-full h-full bg-gradient-to-r from-black via-blue-800 via-green-800 via-brown-800 via-yellow-800 to-purple-800 animate-gradient-x"></div>
@@ -133,6 +153,27 @@
 
 <div id="overlay" class="fixed inset-0 bg-black bg-opacity-50 hidden z-40"></div>
 
+<script>
+  const menuBtn = document.getElementById("menuBtn");
+  const closeBtn = document.getElementById("closeBtn");
+  const dashboard = document.getElementById("dashboard");
+
+  menuBtn.addEventListener("click", () => {
+    dashboard.classList.remove("translate-x-full");
+  });
+
+  closeBtn.addEventListener("click", () => {
+    dashboard.classList.add("translate-x-full");
+  });
+
+  const submenuToggles = document.querySelectorAll(".submenu-toggle");
+  submenuToggles.forEach(toggle => {
+    toggle.addEventListener("click", () => {
+      const submenu = toggle.nextElementSibling;
+      if (submenu) submenu.classList.toggle("hidden");
+    });
+  });
+</script>
 
 </body>
 </html>
