--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
   <div class="flex items-center gap-2">
     <img src="./image/logo.png" class="h-10 w-auto mix-blend-screen" alt="Logo Vizta" />
   </div>
-  <button id="loginBtn" class="bg-blue-700 hover:bg-blue-800 text-white font-bold py-2 px-4 rounded focus:outline-none">
+  <button id="loginBtn" class="bg-gradient-to-r from-black via-blue-800 via-green-800 via-brown-800 via-yellow-800 to-purple-800 hover:bg-black text-white font-bold py-2 px-4 rounded focus:outline-none">
     Login
   </button>
 </nav>
